# Educational-App

./: Edd app  REWARD_SYSTEM_SPECIFICATION.md  pyproject.toml  second.py  visual_feedback_correct_answers_spec.md
